--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "clsx": "^1.0.4",
+    "lodash.debounce": "^4.0.8",
+    "lodash.isequal": "^4.5.0",
+    "lodash.throttle": "^4.1.1",
+    "prop-types": "^15.5.8",
+    "react-swipeable": "^5.2.0",
+    "resize-observer-polyfill": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
