--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.14.0",
-    "react-swipeable": "^5.2.0",
+    "react-swipeable": "^6.0.0-alpha.1",
     "resize-observer-polyfill": "^1.5.0",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
